--- a/Wine_project_DB.ipynb
+++ b/Wine_project_DB.ipynb
@@ -1,11 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Mongodb\n",
+    "\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://winemaster:<password>@projectw-vkqlx.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "db = client.test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x115a13448>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Imports\n",
+    "import pandas as pd\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "#Load csv dataset\n",
+    "data = pd.read_csv('result.csv')\n",
+    "\n",
+    "# Connect to Mongodb\n",
+    "client = MongoClient(\"mongodb+srv://winemaster:winescrape7@projectw-vkqlx.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "db = client['winedb']\n",
+    "collection = db['wines']\n",
+    "\n",
+    "data.reset_index(inplace=True)\n",
+    "data_dict = data.to_dict(\"records\")\n",
+    "\n",
+    "# Insert collection\n",
+    "collection.insert_many(data_dict)\n"
+   ]
   }
  ],
  "metadata": {
