mvp 1.0 - View da tabela de vinhos

--- a/Wine_project_DB.ipynb
+++ b/Wine_project_DB.ipynb
@@ -45,6 +45,379 @@
     "# Insert collection\n",
     "collection.insert_many(data_dict)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>wine_name</th>\n",
+       "      <th>link</th>\n",
+       "      <th>country</th>\n",
+       "      <th>type</th>\n",
+       "      <th>description</th>\n",
+       "      <th>evaluation</th>\n",
+       "      <th>rating_count</th>\n",
+       "      <th>lowest_price</th>\n",
+       "      <th>full_price</th>\n",
+       "      <th>discount</th>\n",
+       "      <th>vivino_name</th>\n",
+       "      <th>vivino_link</th>\n",
+       "      <th>vivino_score</th>\n",
+       "      <th>vivino_rating</th>\n",
+       "      <th>vivino_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Pérez Cruz Limited Edition D.O. Valle del Maip...</td>\n",
+       "      <td>wine.com.br/vinhos/perez-cruz-limited-edition-...</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Frutado, taninos presentes, médio corpo, fresc...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>145.76</td>\n",
+       "      <td>180.9</td>\n",
+       "      <td>0.194251</td>\n",
+       "      <td>Perez Cruz Cabernet Franc Limited Edition 2016</td>\n",
+       "      <td>www.vivino.com/wines/144769511</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>881.0</td>\n",
+       "      <td>129.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Finca La Chamiza Martín Alsina Malbec 2014</td>\n",
+       "      <td>wine.com.br/vinhos/finca-la-chamiza-martin-als...</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Frutado, amadeirado, corpo de médio para encor...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>292.82</td>\n",
+       "      <td>495.9</td>\n",
+       "      <td>0.409518</td>\n",
+       "      <td>La Chamiza Martin Alsina Malbec 2014</td>\n",
+       "      <td>www.vivino.com/wines/11537877</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>168.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Domaine L'Ostal Cazes Grand Vin 2015</td>\n",
+       "      <td>wine.com.br/vinhos/domaine-l-ostal-cazes-grand...</td>\n",
+       "      <td>França</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Encorpado, boa acidez, taninos macios</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>258.71</td>\n",
+       "      <td>335.9</td>\n",
+       "      <td>0.229801</td>\n",
+       "      <td>L'Ostal Cazes Grand Vin Minervois La Livinière...</td>\n",
+       "      <td>www.vivino.com/wines/120763131</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Maycas del Limarí Reserva Especial Pinot Noir ...</td>\n",
+       "      <td>wine.com.br/vinhos/maycas-del-limari-reserva-e...</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Bom corpo, acidez presente, taninos sedosos, f...</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>166.94</td>\n",
+       "      <td>206.9</td>\n",
+       "      <td>0.193137</td>\n",
+       "      <td>Maycas del Limari Reserva Especial Pinot Noir ...</td>\n",
+       "      <td>www.vivino.com/wines/152575001</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Pauillac De Lynch-Bages 2015</td>\n",
+       "      <td>wine.com.br/vinhos/pauillac-de-lynch-bages-201...</td>\n",
+       "      <td>França</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Médio corpo, boa acidez, taninos presentes, fi...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>364.59</td>\n",
+       "      <td>630.9</td>\n",
+       "      <td>0.422111</td>\n",
+       "      <td>Château Lynch-Bages Pauillac de Lynch-Bages 2015</td>\n",
+       "      <td>www.vivino.com/wines/63019180</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>363</td>\n",
+       "      <td>363</td>\n",
+       "      <td>Antinori Santa Cristina I.G.T. Toscana Rosso 2017</td>\n",
+       "      <td>wine.com.br/vinhos/antinori-santa-cristina-i-g...</td>\n",
+       "      <td>Itália</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Na boca apresenta boa estrutura, maciez e fres...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.53</td>\n",
+       "      <td>139.9</td>\n",
+       "      <td>0.159900</td>\n",
+       "      <td>Santa Cristina a Pancole Rosso 2017</td>\n",
+       "      <td>www.vivino.com/wines/161602898</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>364</td>\n",
+       "      <td>364</td>\n",
+       "      <td>Antinori Santa Cristina I.G.T. Toscana Rosso 2017</td>\n",
+       "      <td>wine.com.br/vinhos/antinori-santa-cristina-i-g...</td>\n",
+       "      <td>Itália</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Na boca apresenta boa estrutura, maciez e fres...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.53</td>\n",
+       "      <td>139.9</td>\n",
+       "      <td>0.159900</td>\n",
+       "      <td>Santa Cristina a Pancole Rosso 2017</td>\n",
+       "      <td>www.vivino.com/wines/161602898</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>365</td>\n",
+       "      <td>365</td>\n",
+       "      <td>Antinori Santa Cristina I.G.T. Toscana Rosso 2017</td>\n",
+       "      <td>wine.com.br/vinhos/antinori-santa-cristina-i-g...</td>\n",
+       "      <td>Itália</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Na boca apresenta boa estrutura, maciez e fres...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.53</td>\n",
+       "      <td>139.9</td>\n",
+       "      <td>0.159900</td>\n",
+       "      <td>Santa Cristina a Pancole Rosso 2017</td>\n",
+       "      <td>www.vivino.com/wines/161602898</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>366</td>\n",
+       "      <td>366</td>\n",
+       "      <td>Villa Antinori I.G.T. Toscana 2016</td>\n",
+       "      <td>wine.com.br/vinhos/villa-antinori-i-g-t-toscan...</td>\n",
+       "      <td>Itália</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Na boca apresenta bom corpo, taninos macios e ...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>211.65</td>\n",
+       "      <td>249.9</td>\n",
+       "      <td>0.153061</td>\n",
+       "      <td>Antinori Villa Antinori Toscana Bianco 2016</td>\n",
+       "      <td>www.vivino.com/wines/92086715</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>6591.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>367</td>\n",
+       "      <td>367</td>\n",
+       "      <td>Columbia Crest Grand Estates Cabernet Sauvigno...</td>\n",
+       "      <td>wine.com.br/vinhos/columbia-crest-grand-estate...</td>\n",
+       "      <td>Estados Unidos</td>\n",
+       "      <td>tinto</td>\n",
+       "      <td>Final persistente com notas de chocolate amargo.</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>152.82</td>\n",
+       "      <td>179.9</td>\n",
+       "      <td>0.150528</td>\n",
+       "      <td>Columbia Crest Grand Estates Cabernet Sauvigno...</td>\n",
+       "      <td>www.vivino.com/wines/86472793</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3388.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>368 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index  Unnamed: 0                                          wine_name  \\\n",
+       "0        0           0  Pérez Cruz Limited Edition D.O. Valle del Maip...   \n",
+       "1        1           1         Finca La Chamiza Martín Alsina Malbec 2014   \n",
+       "2        2           2               Domaine L'Ostal Cazes Grand Vin 2015   \n",
+       "3        3           3  Maycas del Limarí Reserva Especial Pinot Noir ...   \n",
+       "4        4           4                       Pauillac De Lynch-Bages 2015   \n",
+       "..     ...         ...                                                ...   \n",
+       "363    363         363  Antinori Santa Cristina I.G.T. Toscana Rosso 2017   \n",
+       "364    364         364  Antinori Santa Cristina I.G.T. Toscana Rosso 2017   \n",
+       "365    365         365  Antinori Santa Cristina I.G.T. Toscana Rosso 2017   \n",
+       "366    366         366                 Villa Antinori I.G.T. Toscana 2016   \n",
+       "367    367         367  Columbia Crest Grand Estates Cabernet Sauvigno...   \n",
+       "\n",
+       "                                                  link         country   type  \\\n",
+       "0    wine.com.br/vinhos/perez-cruz-limited-edition-...           Chile  tinto   \n",
+       "1    wine.com.br/vinhos/finca-la-chamiza-martin-als...       Argentina  tinto   \n",
+       "2    wine.com.br/vinhos/domaine-l-ostal-cazes-grand...          França  tinto   \n",
+       "3    wine.com.br/vinhos/maycas-del-limari-reserva-e...           Chile  tinto   \n",
+       "4    wine.com.br/vinhos/pauillac-de-lynch-bages-201...          França  tinto   \n",
+       "..                                                 ...             ...    ...   \n",
+       "363  wine.com.br/vinhos/antinori-santa-cristina-i-g...          Itália  tinto   \n",
+       "364  wine.com.br/vinhos/antinori-santa-cristina-i-g...          Itália  tinto   \n",
+       "365  wine.com.br/vinhos/antinori-santa-cristina-i-g...          Itália  tinto   \n",
+       "366  wine.com.br/vinhos/villa-antinori-i-g-t-toscan...          Itália  tinto   \n",
+       "367  wine.com.br/vinhos/columbia-crest-grand-estate...  Estados Unidos  tinto   \n",
+       "\n",
+       "                                           description  evaluation  \\\n",
+       "0    Frutado, taninos presentes, médio corpo, fresc...         4.0   \n",
+       "1    Frutado, amadeirado, corpo de médio para encor...         0.0   \n",
+       "2                Encorpado, boa acidez, taninos macios         0.0   \n",
+       "3    Bom corpo, acidez presente, taninos sedosos, f...         4.5   \n",
+       "4    Médio corpo, boa acidez, taninos presentes, fi...         3.0   \n",
+       "..                                                 ...         ...   \n",
+       "363  Na boca apresenta boa estrutura, maciez e fres...         0.0   \n",
+       "364  Na boca apresenta boa estrutura, maciez e fres...         0.0   \n",
+       "365  Na boca apresenta boa estrutura, maciez e fres...         0.0   \n",
+       "366  Na boca apresenta bom corpo, taninos macios e ...         0.0   \n",
+       "367   Final persistente com notas de chocolate amargo.         0.0   \n",
+       "\n",
+       "     rating_count  lowest_price  full_price  discount  \\\n",
+       "0             7.0        145.76       180.9  0.194251   \n",
+       "1             0.0        292.82       495.9  0.409518   \n",
+       "2             0.0        258.71       335.9  0.229801   \n",
+       "3            23.0        166.94       206.9  0.193137   \n",
+       "4             1.0        364.59       630.9  0.422111   \n",
+       "..            ...           ...         ...       ...   \n",
+       "363           0.0        117.53       139.9  0.159900   \n",
+       "364           0.0        117.53       139.9  0.159900   \n",
+       "365           0.0        117.53       139.9  0.159900   \n",
+       "366           0.0        211.65       249.9  0.153061   \n",
+       "367           0.0        152.82       179.9  0.150528   \n",
+       "\n",
+       "                                           vivino_name  \\\n",
+       "0       Perez Cruz Cabernet Franc Limited Edition 2016   \n",
+       "1                 La Chamiza Martin Alsina Malbec 2014   \n",
+       "2    L'Ostal Cazes Grand Vin Minervois La Livinière...   \n",
+       "3    Maycas del Limari Reserva Especial Pinot Noir ...   \n",
+       "4     Château Lynch-Bages Pauillac de Lynch-Bages 2015   \n",
+       "..                                                 ...   \n",
+       "363                Santa Cristina a Pancole Rosso 2017   \n",
+       "364                Santa Cristina a Pancole Rosso 2017   \n",
+       "365                Santa Cristina a Pancole Rosso 2017   \n",
+       "366        Antinori Villa Antinori Toscana Bianco 2016   \n",
+       "367  Columbia Crest Grand Estates Cabernet Sauvigno...   \n",
+       "\n",
+       "                        vivino_link  vivino_score  vivino_rating  vivino_price  \n",
+       "0    www.vivino.com/wines/144769511           4.0          881.0         129.5  \n",
+       "1     www.vivino.com/wines/11537877           4.2           97.0         168.0  \n",
+       "2    www.vivino.com/wines/120763131           3.9          219.0           NaN  \n",
+       "3    www.vivino.com/wines/152575001           3.7          222.0           NaN  \n",
+       "4     www.vivino.com/wines/63019180           4.0          382.0           NaN  \n",
+       "..                              ...           ...            ...           ...  \n",
+       "363  www.vivino.com/wines/161602898           NaN            NaN           NaN  \n",
+       "364  www.vivino.com/wines/161602898           NaN            NaN           NaN  \n",
+       "365  www.vivino.com/wines/161602898           NaN            NaN           NaN  \n",
+       "366   www.vivino.com/wines/92086715           3.8         6591.0           NaN  \n",
+       "367   www.vivino.com/wines/86472793           3.7         3388.0           NaN  \n",
+       "\n",
+       "[368 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Imports\n",
+    "import pandas as pd\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "# Connect to Mongodb\n",
+    "client = MongoClient(\"mongodb+srv://winemaster:winescrape7@projectw-vkqlx.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "db = client['winedb']\n",
+    "collection = db['wines']\n",
+    "\n",
+    "df = pd.DataFrame(list(collection.find()))\n",
+    "del df['_id']\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
@@ -63,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
