--- a/Wine_project_DB.ipynb
+++ b/Wine_project_DB.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x9cf7608>"
+       "<pymongo.results.InsertManyResult at 0xa2f9e88>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,6 +417,42 @@
     "df = pd.DataFrame(list(collection.find()))\n",
     "del df['_id']\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x9cf7608>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Imports\n",
+    "import pandas as pd\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "#Load csv dataset\n",
+    "data = pd.read_csv('result.csv')\n",
+    "\n",
+    "# Connect to Mongodb\n",
+    "client = MongoClient(\"mongodb+srv://winemaster:winescrape7@projectw-vkqlx.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "db = client['winedb']\n",
+    "collection = db['wines']\n",
+    "\n",
+    "data.reset_index(inplace=True)\n",
+    "data_dict = data.to_dict(\"records\")\n",
+    "\n",
+    "# Insert collection\n",
+    "collection.insert_many(data_dict)\n"
    ]
   }
  ],
