implantacao dos campos de uva e classificacao

--- a/Wine_project_DB.ipynb
+++ b/Wine_project_DB.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0xa16d0c8>"
+       "<pymongo.results.InsertManyResult at 0xa360648>"
       ]
      },
      "execution_count": 1,
@@ -38,6 +38,7 @@
     "client = MongoClient(\"mongodb+srv://winemaster:winescrape7@projectw-vkqlx.mongodb.net/test?retryWrites=true&w=majority\")\n",
     "db = client['winedb']\n",
     "collection = db['wines']\n",
+    "collection.drop()\n",
     "\n",
     "data.reset_index(inplace=True)\n",
     "data_dict = data.to_dict(\"records\")\n",
