--- a/wine-scrappe-description.ipynb
+++ b/wine-scrappe-description.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iniciando session_get\n",
+      "\n",
+      "Scraping page: https://www.wine.com.br/vinhos/fantinel-eclisse-la-roncaia-i-g-t-venezia-giulia-branco-2016/prod20164.html  =  <Response [200]>\n",
+      "Branco: Sauvignon Blanc, Picolit \n",
+      "Seco\n",
+      "Iniciando session_get\n",
+      "\n",
+      "Scraping page: https://www.wine.com.br/vinhos/ropiteau-freres-premier-cru-a-o-c-puligny-montrachet-sous-le-puits-blanc-2016/prod20281.html  =  <Response [200]>\n",
+      "Branco: Chardonnay (100.00%)\n",
+      "Seco\n",
+      "Iniciando session_get\n",
+      "\n",
+      "Scraping page: https://www.wine.com.br/vinhos/pinhal-da-torre-late-harvest-tardio-2010-500-ml/prod21088.html  =  <Response [200]>\n",
+      "Branco: Fernão Pires (100%)\n",
+      "Suave/Doce\n",
+      "Iniciando session_get\n",
+      "\n",
+      "Scraping page: https://www.wine.com.br/vinhos/covela-edicao-nacional-d-o-c-vinho-verde-arinto-2017/prod24414.html  =  <Response [200]>\n",
+      "Branco: Arinto\n",
+      "Seco\n",
+      "Iniciando session_get\n",
+      "\n",
+      "Scraping page: https://www.wine.com.br/vinhos/calyptra-gran-reserva-sauvignon-blanc-2015/prod21766.html  =  <Response [200]>\n",
+      "Branco: Sauvignon Blanc (100%)\n",
+      "Seco\n"
+     ]
+    }
+   ],
    "source": [
     "url_list = [\n",
     "    'https://www.wine.com.br/vinhos/fantinel-eclisse-la-roncaia-i-g-t-venezia-giulia-branco-2016/prod20164.html',\n",
@@ -33,6 +65,8 @@
     "    'https://www.wine.com.br/vinhos/covela-edicao-nacional-d-o-c-vinho-verde-arinto-2017/prod24414.html',\n",
     "    'https://www.wine.com.br/vinhos/calyptra-gran-reserva-sauvignon-blanc-2015/prod21766.html'\n",
     "]\n",
+    "\n",
+    "url_single= 'https://www.wine.com.br/vinhos/fantinel-eclisse-la-roncaia-i-g-t-venezia-giulia-branco-2016/prod20164.html'\n",
     "\n",
     "HEADERS = {\n",
     "    'user-agent': ('Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 '\n",
@@ -65,7 +99,16 @@
     "for wine in url_list:\n",
     "    wine_soup= get_soup(wine)\n",
     "    \n",
-    "    technical_description = "
+    "    technical_details = wine_soup.find('div', class_='TechnicalDetails')\n",
+    "    tipo_e_uva = technical_details.find('div', class_='TechnicalDetails-description--grape')\n",
+    "    tipo = tipo_e_uva.find('div', class_=\"Right\").dt.text\n",
+    "    uva = tipo_e_uva.find('div', class_=\"Right\").dd.text\n",
+    "\n",
+    "    classificacao_container = technical_details.find('div', class_='TechnicalDetails-description--classification')\n",
+    "    classificacao = classificacao_container.find('div', class_=\"Right\").dd.text\n",
+    "\n",
+    "    print('{}: {}'.format(tipo, uva))\n",
+    "    print(classificacao)"
    ]
   }
  ],
